[gd_scene load_steps=17 format=2]

[ext_resource path="res://Testing resources/giant_enemy_trump.png" type="Texture" id=1]
[ext_resource path="res://Testing resources/giant_enemy_trump_idle.png" type="Texture" id=2]
[ext_resource path="res://Testing resources/giant_enemy_trump_walk.png" type="Texture" id=3]
[ext_resource path="res://Testing resources/giant_enemy_trump_missile.png" type="Texture" id=4]
[ext_resource path="res://Testing resources/giant_enemy_trump_lazer.png" type="Texture" id=5]
[ext_resource path="res://Trump.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 58.0668, 10 )

[sub_resource type="CircleShape2D" id=1]
radius = 49.5812

[sub_resource type="Animation" id=2]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=8]
resource_name = "lazer"
tracks/0/type = "value"
tracks/0/path = NodePath("Lazer:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=4]
resource_name = "lazer close"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Lazer:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 4, 4, 3, 1, 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "lazer open"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Lazer:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=10]
resource_name = "missile"
tracks/0/type = "value"
tracks/0/path = NodePath("Missile:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 6 ]
}

[sub_resource type="Animation" id=6]
resource_name = "missile open"
tracks/0/type = "value"
tracks/0/path = NodePath("Missile:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 9 ]
}

[sub_resource type="Animation" id=7]
resource_name = "missle close"
tracks/0/type = "value"
tracks/0/path = NodePath("Missile:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 6, 7, 6, 5, 4, 3, 2, 1, 0, 0 ]
}

[node name="Trump" type="KinematicBody2D"]
script = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 62.6975 )
shape = SubResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 6.00677, -10.345 )
shape = SubResource( 1 )

[node name="Trump" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="Idle" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
vframes = 2

[node name="Walk" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
hframes = 2
vframes = 2
frame = 3

[node name="Missile" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
hframes = 4
vframes = 5
frame = 6

[node name="Lazer" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )
hframes = 3
vframes = 3
frame = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/Walk = SubResource( 3 )
anims/lazer = SubResource( 8 )
"anims/lazer close" = SubResource( 4 )
"anims/lazer open" = SubResource( 5 )
anims/missile = SubResource( 10 )
"anims/missile open" = SubResource( 6 )
"anims/missle close" = SubResource( 7 )

[node name="Pause" type="Timer" parent="."]
one_shot = true

[node name="Go" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Attack_Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Pause" to="." method="_on_Pause_timeout"]
[connection signal="timeout" from="Go" to="." method="_on_Go_timeout"]
[connection signal="timeout" from="Attack_Timer" to="." method="_on_Attack_Timer_timeout"]
